# clifpy

./: .gitignore  404.html  Makefile  README.md  TODO.md  conftest.py  core.py  example.ipynb  hospitalization_model.py  index.html  labs_model.py  medication_admin_continuous_model.py  mkdocs.yml  objects.inv  patient_assessments_model.py  patient_model.py  position_model.py  pyproject.toml  respiratory_support_model.py  run_crosswalk.py  sitemap.xml  vitals_model.py
BaseTable/: index.html
CQODE/: CQODE.R
ICU_mortality_model/: 01_cohort.ipynb  02_feature_engineering.ipynb  config_demo.json
api/: index.html
changelog/: index.html
clifpy/: .gitignore  __init__.py  clif_orchestrator.py
config/: config.json  demo_data_config.yaml
contributing/: index.html
data/: adt.json  all_tables.json  medication_admin_continuous.json  microbiology_culture.json  respiratory_support.json  vitals.json
dev/: ase_dev_final.ipynb  check_mar_duplicates_dev.ipynb  demo.py  doctest_dev.md  dqa-check-count.md  memory_tracker.py  readme.md  requirements.txt  sofa2_dev.py  sofa2_gcs_sedation.py  sofa_dev.ipynb  sofa_dev.py  test_docs.py  unit_converter_demo.py  unit_converter_dev.py  wf_author_30_schemas.js
docs/: BaseTable.md  README.md  contributing.md  index.md  logging.md  prompts.md  sepsis_module.md  wide_dataset.md
examples/: 00_basic_usage.py  00_clif_demo_data.ipynb  01_basic_usage.ipynb  01_demo_from_files.py  02_individual_tables.ipynb  03_data_validation.ipynb  04_vitals_analysis.ipynb  05_timezone_handling.ipynb  06_data_filtering.ipynb  07_wide_dataset_creation.ipynb  08_hourly_wide_dataset_creation.ipynb  README.md  clif_orchestrator_simple.py  config_loading_demo.ipynb  crosswalk_2_1_to_3_0_demo.ipynb  demo.py  dqa_demo.ipynb  example_distribution_methods.ipynb  hospital_diagnosis_demo.py  hospital_diagnosis_simple.py  icu_ecdf_analysis.py  index.html  labs_demo.ipynb  labs_ref_unit_demo.ipynb  mdro_flags_demo.py  medication_admin_intermittent_outlier_demo.ipynb  outlier_handling_vitals.py  respiratory_support_demo.ipynb  sat_sbt_demo.py  sepsis_demo.py  sofa_demo.py  stitching_encounters_demo.ipynb  test_basetable_validation.ipynb  unit_converter_demo.ipynb
logging/: index.html
prompts/: index.html
pyclif.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schemas/: adt.py  hospitalization.json  hospitalization.py  labs.json  labs.py  medication_admin_continuous.py  patient.json  patient.py  patient_assessments.json  patient_assessments.py  position.json  position.py  respiratory_support.py  vitals.py
search/: search_index.json
tests/: README.md  conftest.py  run_all_tests.py  sofa_dev.ipynb  test_ase.ipynb  test_clif.py  test_clif_versioning.py  test_compare_polars_duckdb.py  test_convert_2_1_to_v3.ipynb  test_crosswalk.py  test_hosp_dx.ipynb  test_imv_episodes.py  test_mac.ipynb  test_patient.py  test_respiratory_support.py  test_sofa_all.py  test_sofa_polars.ipynb  test_table_one.py  test_validator.py  test_wide.ipynb
tools/: build_jsons.py
(+418 files in other folders)
