[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyclif"  
version = "0.0.1"
description = "A Python package for working with CLIF EHR data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Kaveri Chhikara", email = "kaveri.chhikara@gmail.com"},
  {name = "Dema Therese", email = "dema@uchicago.edu"},
  {name = "Vaishvik Chaudhari", email = "Vaishvikc@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: Apache 2.0",
  "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "duckdb",
  "pyarrow",
  "matplotlib",
  "seaborn",
  "pydantic",
  "pytest",
  "pytz",
  "tqdm",
  "marimo>=0.14.17",
]

[tool.setuptools]
# Removed src layout; packages discovered from project root
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["clifpy*"]

[tool.setuptools.package-data]
pyclif = ["data/clif_demo/*.parquet", "mCIDE/*.json"]
